# OpenRA-RL

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .openenvignore  DIRECTIVES_QUICKSTART.md  Dockerfile  Dockerfile.agent  README.md  __init__.py  client.py  config.yaml  docker-compose.yaml  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  sync-to-hf.yml
docker/: build.sh  entrypoint.sh  replay-viewer.sh
documents/: architecture_diagram.py  game_state_diagram.py
examples/: README.md  config-lmstudio.yaml  config-minimal.yaml  config-ollama.yaml  config-openrouter.yaml  directives-balanced.yaml  directives-rush.yaml  directives-turtle.yaml  llm_agent.py  mcp_bot.py  scripted_bot.py
openra_env/: __init__.py  agent.py  bench_export.py  bench_submit.py  client.py  command_guard.py  config.py  debug_viz.py  directive_metrics.py  directives.py  enemy_memory.py  enemy_spatial_memory.py  game_data.py  mcp_server.py  mcp_ws_client.py  models.py  normalization.py  obs_tensor.py  opponent_intel.py  reward.py
openra_env/cli/: commands.py  console.py  docker_manager.py  main.py  wizard.py
openra_env/prompts/: __init__.py  default.txt  default_prompts.yaml
openra_env/server/: app.py  bridge_client.py  openra_environment.py  openra_process.py  requirements.txt
proto/: rl_bridge.proto
scripts/: eval_guard_reduction.py  test_integration.py
skill/: SKILL.md
tests/: conftest.py  test_bridge.py  test_cli.py  test_command_guard.py  test_config.py  test_directives.py  test_enemy_memory.py  test_enemy_spatial_memory.py  test_environment.py  test_llm_agent.py  test_mcp_tools.py  test_models.py  test_obs_tensor.py  test_planning.py  test_reward.py
